--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "distilleries/wordpress",
   "description": "Wordpress default structure",
   "license": "MIT",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "authors": [
     {
       "name": "Maxime Francois",
@@ -44,6 +44,7 @@
       "app/mu-plugins/{$name}/": ["type:wordpress-myplugin"]
     },
     "webroot-dir": "wp",
-    "webroot-package": "wordpress"
+    "webroot-package": "wordpress",
+    "minimum-stability": "stable"
   }
 }
